claims api is added

--- a/client/templates/index.html
+++ b/client/templates/index.html
@@ -24,7 +24,7 @@
         {% for task in tasks%}
         <tr>
             <td>{{task.content}}</td>
-            <td>{{task.date_created.date()}}</td>
+            <td>{{task.date_created.date() - task.date_created.time()}}</td>
             <td>
                 <a href="/delete/{{task.id}}" >Delete</a>
                 <br>
